fix z-index

--- a/style.less
+++ b/style.less
@@ -78,6 +78,7 @@
         margin: 22vw auto;
         border-radius: 100%;
         position:relative;
+        z-index: 10;
 
         svg {
             position:absolute;
